# RayTracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
BuleUtah/: CMakeLists.txt
BuleUtah/src/: main.cpp
BuleUtah/src/Render/: ray_color.cpp  render.cpp  render.hpp  simple_light.cpp  single_scene.cpp  teapot.hpp
CornellBox/: CMakeLists.txt
CornellBox/src/: main.cpp
CornellBox/src/Render/: cornellbox_scene.cpp  render.cpp  render.hpp
Engine/include/: constante.hpp  material.hpp  vec3.hpp
Engine/src/BVH/: bvh.cpp  bvh.hpp
Engine/src/Color/: color.cpp
Engine/src/HitTable/: hittable.cpp  hittable.hpp
Engine/src/Sphere/: sphere.cpp
Engine/src/Triangle/: triangle.cpp  triangle.hpp
Esfera/: CMakeLists.txt
Esfera/src/: main.cpp
Esfera/src/Render/: random_scene.cpp  ray_color.cpp  render.cpp  render.hpp  simple_light.cpp  single_scene.cpp  solar_scene.cpp
Scenes/BuleUtah/: bule.cpp  bule.hpp
Scenes/CornellBox/: cornell_box.cpp
Scenes/Esfera/: esfera.cpp  esfera.hpp
Scenes/Render/: render.cpp  render.hpp
src/: main.cpp
src/Engine/include/: constante.hpp  material.hpp  ray.hpp  vec3.hpp
src/Engine/src/Color/: color.cpp  color.hpp
src/Engine/src/HitTable/: hittable.hpp  hittable_list.hpp
src/Engine/src/ReadObj/: read_obj.cpp  read_obj.hpp
src/Engine/src/Torus/: torus.cpp  torus.hpp
src/Engine/src/Triangle/: triangle.cpp  triangle.hpp
src/Scenes/CornellBox/: cornell_box.cpp  cornell_box.hpp
src/Scenes/Esfera/: esfera.cpp  esfera.hpp
src/Scenes/Object/: obj.cpp  obj.hpp
src/Scenes/Render/: ray_color.cpp  render.cpp  render.hpp
